first real comit

--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "expo": {
-    "name": "BoltApp",
+    "name": "BoltApps",
     "slug": "BoltApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    
+    "backgroundColor": "#171717",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,12 +23,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        
         "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      
     }
   }
 }
