--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.68.2",
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^4.12.2",
+    "react-native-select-multiple": "^2.1.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
